--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     <div class="header">
       <h1 class="light-title">Reliable, efficient delivery</h1>
       <h1>Powered by Technology</h1>
-      <p>Our Artificial Intelligence powered tools use millions of project data points
-        to ensure that your project is successful</p>
+      <p>Our Artificial Intelligence powered tools use</p>
+      <p> of project data points to ensure that your project is successful</p>
     </div>
   
     <div class="cards">
